<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_marginLeft="15dp"
              android:layout_marginRight="15dp"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <!-- 更改头像 -->
    <RelativeLayout
        android:id="@+id/change_icon"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            style="@style/mine_text_style"
            android:text="@string/change_icon"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/mine_portrait_civ"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="2dp"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_mine_portrait"
            app:civ_border_color="@color/dark"
            />
    </RelativeLayout>

    <include layout="@layout/divide_line"/>

    <!-- 昵称 -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">


        <TextView
            style="@style/mine_text_style"
            android:text="@string/my_name"/>

        <TextView
            android:id="@+id/username_tv"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_centerVertical="true"
            android:textSize="20sp"
            android:text="小强"/>
    </RelativeLayout>

    <include layout="@layout/divide_line"/>

    <!-- 性别 -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">


        <TextView
            style="@style/mine_text_style"
            android:text="@string/my_sex"/>

        <TextView
            android:id="@+id/sex"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_centerVertical="true"
            android:textSize="20sp"
            android:text="男"/>
    </RelativeLayout>

    <include layout="@layout/divide_line"/>

    <!-- 生日 -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            style="@style/mine_text_style"
            android:text="@string/my_birthday"/>


        <TextView
            android:id="@+id/birth_tv"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_centerVertical="true"
            android:textSize="20sp"
            android:text="1992-01-14"/>
    </RelativeLayout>

    <include layout="@layout/divide_line"/>

    <!-- 邮箱 -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            style="@style/mine_text_style"
            android:text="@string/my_email"
            />


        <TextView
            android:id="@+id/info_email_tv"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_centerVertical="true"
            android:textSize="20sp"
            android:text="762988574@qq.com"/>
    </RelativeLayout>

    <include layout="@layout/divide_line"/>

    <!-- 绑定手机 -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">


        <TextView
            style="@style/mine_text_style"
            android:text="@string/my_phone"
            />


        <TextView
            android:id="@+id/info_phone_tv"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_centerVertical="true"
            android:textSize="20sp"
            android:text="130**078"/>
    </RelativeLayout>
    <Button
        android:id="@+id/out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="退出登录"
        />
    <include layout="@layout/divide_line"/>
</LinearLayout>